--- a/code_gui/gui/mainwindow.ui
+++ b/code_gui/gui/mainwindow.ui
@@ -1190,6 +1190,9 @@ QLabel
         <property name="frameShadow">
          <enum>QFrame::Plain</enum>
         </property>
+        <property name="lineWidth">
+         <number>1</number>
+        </property>
         <layout class="QGridLayout" name="gridLayout_79">
          <item row="0" column="0">
           <widget class="QTabWidget" name="tabWidget_14">
@@ -19087,8 +19090,8 @@ QLabel
              <rect>
               <x>0</x>
               <y>0</y>
-              <width>192</width>
-              <height>751</height>
+              <width>138</width>
+              <height>737</height>
              </rect>
             </property>
             <layout class="QGridLayout" name="gridLayout_13">
@@ -19125,7 +19128,7 @@ QLabel
      <x>0</x>
      <y>0</y>
      <width>1482</width>
-     <height>29</height>
+     <height>28</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuHelp">
